add custom profiles

--- a/BottangoTeddyDriver/BottangoTeddyDriver.csproj
+++ b/BottangoTeddyDriver/BottangoTeddyDriver.csproj
@@ -64,6 +64,7 @@
     <Compile Include="PPMWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardProfiles.cs" />
     <Compile Include="TapeParser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
